# delivery-service

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  dump.rdb  pyproject.toml  run_tests.sh
.docker/app/: Dockerfile
.docker/db/: init.sql
src/: database.db  main.py  strings.py  tasks.py  utils.py
src/api/: dependencies.py
src/api/routes/: debug.py  parcels.py
src/core/: cache.py  config.py  errors.py  events.py  logger.py
src/db/: base.py  database.db
src/db/models/: parcels.py
src/parcels/: models.py  router.py  schemas.py
src/resources/: strings.py
src/schemas/: parcels.py
src/services/: currency.py  shipping.py
src/utils/: utils.py
tests/: parcels.py
tests/parcels/: test_create_parcel.py  test_get_parcel.py  test_get_parcel_types.py  test_get_parcels_list.py
