[tool.poetry]
name = "delivery-service-package"
version = "0.1.0"
description = ""
authors = ["Ars Vladimirov <grokhael@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.5"
sqlalchemy = "^2.0.36"
aioredis = "^2.0.1"
httpx = "^0.27.2"
loguru = "^0.7.2"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
asyncpg = "^0.30.0"
uvicorn = "^0.32.0"
websockets = "^14.1"
aiomysql = "^0.2.0"
cryptography = "^43.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
